[package]
name = "rusteze_drone"
version = "0.1.0"
edition = "2021"

[net]
git-fetch-with-cli = true

[dependencies]
crossbeam = "0.8.4"
rand = "0.8.5"
wg_internal = { git = "https://github.com/Rusteze-AP/RS_WGL_2024", branch = "local_changes", features = ["debug"]}
logger = { git = "https://github.com/Rusteze-AP/logger.git", branch = "main" }

[lib]
name = "rusteze_drone"
path = "src/lib.rs"
