[package]
name = "rusteze_drone"
version = "0.1.0"
edition = "2021"

[net]
git-fetch-with-cli = true

[dependencies]
crossbeam = "0.8.4"
rand = "0.8.5"
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"] }
logger = { git = "https://github.com/Rusteze-AP/logger.git", branch = "main" }
rusteze-tests = { git = "https://github.com/Rusteze-AP/rusteze-tests.git"}

[lib]
name = "rusteze_drone"
path = "src/lib.rs"
